# chango

./: .gitignore  .prettierrc  .tokeignore  index.html  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.css  App.tsx  katex.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  periscope.rs
src/app/: globals.css  katex.css  layout.tsx  page.tsx
src/app/chango/: page.tsx
src/app/chango/explanation/: page.tsx
src/app/chango/simulation/: page.tsx
src/app/chango/survey/: page.tsx
src/app/explanation/: page.tsx
src/app/periscope/: page.tsx
src/app/periscope/explanation/: page.tsx  styles.css
src/app/periscope/simulation/: page.tsx
src/app/periscope/survey/: page.tsx
src/app/simulation/: page.tsx
src/app/survey/: page.tsx
src/components/: katex.tsx  navRoute.tsx
src/lib/: bindings.ts  hooks.ts
